--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
   </nav>
   <section id="home">
     <div class="header_group">
-    <a href="#"><h1 data-text='HELLO~ I’m SeAh Kim!<br>Welcome to my Portfolio Homepage!'class="type"></h1></a>
+    <h1 class="type" data-text='HELLO ~．I’m SeAh Kim!<br>Welcome to my Portfolio Homepage ．．．'></h1>
     </div>
     <div class="you-bg" data-youtube="https://youtu.be/LN8RNhbzn6E">
-    </div>
+    </div> 
     <div class="arrow">
       <a href="#about">
           <img src="images/arrow.png" alt="arrow">
@@ -146,8 +146,8 @@
 
   <section id="portfolio">
     <div class="container">
+    <h1>PORTFOLIO</h1>
       <div class="section-title">
-        <h1>PORTFOLIO</h1>
             <div class="title_line"></div>
             <div class="content">
               <div class="button-group">
@@ -162,18 +162,18 @@
         <div class="gallery">
           <div class="web box show">
             <ul>
-              <li><a data-fancybox_="gallery" href="http://placeimg.com/360/360/1"><img
-                    src="http://placeimg.com/360/360/1"></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/360/360/2"><img
-                    src="http://placeimg.com/360/360/2"></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/360/360/3"><img
-                    src="http://placeimg.com/360/360/3"></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/360/360/4"><img
-                    src="http://placeimg.com/360/360/4"></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/360/360/5"><img
-                    src="http://placeimg.com/360/360/5"></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/360/360/6"><img
-                    src="http://placeimg.com/360/360/6"></a></li>
+              <li><a data-fancybox_="gallery" href="http://placeimg.com/320/320/1"><img
+                    src="http://placeimg.com/320/320/1"></a></li>
+              <li><a data-fancybox="gallery" href="http://placeimg.com/320/320/2"><img
+                    src="http://placeimg.com/320/320/2"></a></li>
+              <li><a data-fancybox="gallery" href="http://placeimg.com/320/320/3"><img
+                    src="http://placeimg.com/320/320/3"></a></li>
+              <li><a data-fancybox="gallery" href="http://placeimg.com/320/320/4"><img
+                    src="http://placeimg.com/320/320/4"></a></li>
+              <li><a data-fancybox="gallery" href="http://placeimg.com/320/320/5"><img
+                    src="http://placeimg.com/320/320/5"></a></li>
+              <li><a data-fancybox="gallery" href="http://placeimg.com/320/320/6"><img
+                    src="http://placeimg.com/320/320/6"></a></li>
             </ul>
           </div>
       </div>
@@ -185,13 +185,57 @@
     <h1>MY RESUME</h1>
       <span class="title_line"></span>
       <article>
-        <a href="#"><img src="images/experience.png" alt="경력"></a>
+        <h2><a href="#"><img src="images/experience.png" alt="경력"></a></h2>
       </article>
     </div>
   </section>
 
   <section id="contact">
-    <h1>Contact me</h1>
+  <div class="container">
+    <h1>CONTACT ME</h1>
+      <span class="title_line"></span>
+        <article>
+        <div class="drop">
+        <h2>Drop Me a Line</h2>
+        <form class="contact-form mt-4">
+          <ul class="row">
+            <li class="col-6">
+              <input type="text" name="name" id="name" placeholder="name" />
+            </li>
+            <li class="col-6">
+              <input type="text" name="email" id="email" placeholder="phone" />
+            </li>
+            <li class="col-6">
+              <input type="text" name="email" id="email" placeholder="e-mail" />
+            </li>
+            <li class="col-12">
+              <textarea name="message" id="message" cols="30" rows="5" placeholder="message"></textarea>
+            </li>
+          </ul>
+          <button type="submit" class="btn">Send Message</button>
+        </form>
+        </div>
+        </article>
+      <article>
+      <div class="more">
+      <h2>More About Me</h2>
+        <ul>
+          <li><p><a href="#"><img src="./images/location.png" alt="위치"></a></p></li>
+          <li><p><a href="#"><img src="./images/phone.png" alt="전화"></a></p></li>
+          <li><p><a href="#"><img src="./images/mail.png" alt="메일"></a></p></li>
+          <li><p><a href="#"><img src="./images/birth.png" alt="생일"></a></p></li>
+        </ul>
+        </div>
+        <div class="fine">
+      <h2>Find Me On</h2>
+        <ul>
+          <li><p><a href="#"><img src="./images/kakao.png" alt="카카오"></a></p></li>
+          <li><p><a href="#"><img src="./images/naver.png" alt="네이버"></a></p></li>
+          <li><p><a href="#"><img src="./images/google.png" alt="구글"></a></p></li>
+          <li><p><a href="#"><img src="./images/instar.png" alt="인스타"></a></p></li>
+        </ul>
+        </div>
+        </article>
   </section>
 
   <footer id="main_footer">
