--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Portfolio SeAh Kim</title>
   <!-- 공통 CSS -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <!-- 웹폰트 -->
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR|Roboto&display=swap" rel="stylesheet">
   <!-- FontAwesome(폰트 아이콘) -->
   <script src="https://kit.fontawesome.com/42bc809b80.js" crossorigin="anonymous"></script>
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <!-- bxslider CSS -->
+  <link rel="stylesheet" href="./js/bxslider/jquery.bxslider.min.js">
   <!-- 유투브 배경 -->
   <script src="./js/jquery.youtube-background.js"></script> 
   <!--이미지로드 방지-->
@@ -24,9 +26,9 @@
   <!-- 진입 애니메이션 -->
   <script src="https://unpkg.com/enter-view"></script>
   <!-- 애니메이션 키프레임 -->
-  <link rel="stylesheet" href="ani.css">
+  <link rel="stylesheet" href="./css/ani.css">
   <!-- 사용자 자바스크립트 -->
-  <script src="js/main.js"></script>
+  <script src="./js/main.js"></script>
   <!-- <script src="js/typeit.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typeit/6.0.2/typeit.min.js" type="text/javascript"></script>
 </head>
@@ -58,12 +60,14 @@
       <li><a href="#contact">o</a></li>
     </ul>
   </nav>
+
   <section id="home">
     <div class="header_group">
     <h1 class="type" data-text='HELLO ~．I’m SeAh Kim!<br>Welcome to my Portfolio Homepage ．．．'></h1>
     </div>
     <div class="you-bg" data-youtube="https://youtu.be/LN8RNhbzn6E">
-    </div> 
+    </div>
+
     <div class="arrow">
       <a href="#about">
           <img src="images/arrow.png" alt="arrow">
@@ -146,39 +150,39 @@
 
   <section id="portfolio">
     <div class="container">
-    <h1>PORTFOLIO</h1>
-      <div class="section-title">
+        <h1>PORTFOLIO</h1>
             <div class="title_line"></div>
-            <div class="content">
               <div class="button-group">
-                <button id="one">Web</button>
-                <button id="two">PACKAGE</button>
-                <button id="three">BRANDING</button>
-                <button id="four">POP</button>
-                <button id="five">AD</button>
+                <button id="one">Web | App</button>
+                <button id="two">Package</button>
+                <button id="three">Branding</button>
+                <button id="four">Promotion</button>
               </div>
-            </div>
-      </div>
-        <div class="gallery">
-          <div class="web box show">
+            <div class="slider">
+          <div class="gallery">
             <ul>
-              <li><a data-fancybox_="gallery" href="http://placeimg.com/320/320/1"><img
-                    src="http://placeimg.com/320/320/1"></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/320/320/2"><img
-                    src="http://placeimg.com/320/320/2"></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/320/320/3"><img
-                    src="http://placeimg.com/320/320/3"></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/320/320/4"><img
-                    src="http://placeimg.com/320/320/4"></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/320/320/5"><img
-                    src="http://placeimg.com/320/320/5"></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/320/320/6"><img
-                    src="http://placeimg.com/320/320/6"></a></li>
+              <li><a data-fancybox_="gallery" href="https://eubody.netlify.com"><img
+                    src="./images/web01.png" alt="웹1"></a></li>
+              <li><a data-fancybox="gallery" href="https://hoseo.netlify.com/"><img
+                    src="./images/web02.png" alt="웹2"></a></li>
+              <li><a data-fancybox="gallery" href="https://blahblahshopping.netlify.com"><img
+                    src="./images/web03.png" alt="웹3"></a></li>
+              <li><a data-fancybox="gallery" href="https://cafebene.netlify.com/"><img
+                    src="./images/web04.png" alt="웹4"></a></li>
+              <li><a data-fancybox="gallery" href="https://eubody.netlify.com/"><img
+                    src="./images/web05.png" alt="웹5"></a></li>
+              <li><a data-fancybox="gallery" href="http://placeimg.com/900/900/6"><img
+                    src="./images/web001.png" alt="웹6"></a></li>
+              <li><a data-fancybox="gallery" href="http://placeimg.com/900/900/7"><img
+                    src="./images/web001.png" alt="웹7"></a></li>
+              <li><a data-fancybox="gallery" href="http://placeimg.com/900/900/8"><img
+                    src="./images/web001.png" alt="웹8"></a></li>
             </ul>
           </div>
+        </div>
       </div>
-      </div>
-  </section>
+    </div>
+    </section>
   
   <section id="career">
     <div class="container">
