--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <a href="#about">
           <img src="images/arrow.png" alt="arrow">
       </a>
-  </div>
+    </div>
   </section>
 
   <section id="about">
@@ -153,33 +153,34 @@
         <h1>PORTFOLIO</h1>
             <div class="title_line"></div>
               <div class="button-group">
-                <button id="one">Web | App</button>
-                <button id="two">Package</button>
-                <button id="three">Branding</button>
-                <button id="four">Promotion</button>
+                <button id="Web">Web | App</button>
+                <button id="Package">Package</button>
+                <button id="Branding">Branding</button>
+                <button id="Promotion">Promotion</button>
               </div>
-            <div class="slider">
+
           <div class="gallery">
             <ul>
               <li><a data-fancybox_="gallery" href="https://eubody.netlify.com"><img
-                    src="./images/web01.png" alt="웹1"></a></li>
+                    src="./images/web01.png" alt="웹1">
+                    <span class="more-view"><i class="fas fa-search-plus"></i></span>
+                    </a></li>
               <li><a data-fancybox="gallery" href="https://hoseo.netlify.com/"><img
-                    src="./images/web02.png" alt="웹2"></a></li>
+                    src="./images/web02.png" alt="웹2"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
               <li><a data-fancybox="gallery" href="https://blahblahshopping.netlify.com"><img
-                    src="./images/web03.png" alt="웹3"></a></li>
+                    src="./images/web03.png" alt="웹3"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
               <li><a data-fancybox="gallery" href="https://cafebene.netlify.com/"><img
-                    src="./images/web04.png" alt="웹4"></a></li>
+                    src="./images/web04.png" alt="웹4"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
               <li><a data-fancybox="gallery" href="https://eubody.netlify.com/"><img
-                    src="./images/web05.png" alt="웹5"></a></li>
+                    src="./images/web05.png" alt="웹5"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
               <li><a data-fancybox="gallery" href="http://placeimg.com/900/900/6"><img
-                    src="./images/web001.png" alt="웹6"></a></li>
+                    src="./images/web06.png" alt="웹6"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
               <li><a data-fancybox="gallery" href="http://placeimg.com/900/900/7"><img
-                    src="./images/web001.png" alt="웹7"></a></li>
+                    src="./images/web07.png" alt="웹7"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
               <li><a data-fancybox="gallery" href="http://placeimg.com/900/900/8"><img
-                    src="./images/web001.png" alt="웹8"></a></li>
+                    src="./images/web08.png" alt="웹8"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
             </ul>
           </div>
-        </div>
       </div>
     </div>
     </section>
@@ -221,7 +222,7 @@
         </div>
         </article>
       <article>
-      <div class="more">
+      <div class="more_me">
       <h2>More About Me</h2>
         <ul>
           <li><p><a href="#"><img src="./images/location.png" alt="위치"></a></p></li>
