--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="사이트소개글">
-  <!--사이트 제목-->
-  <meta property="og:title" content="김세아 포트폴리오에 오신것을 환영합니다.">
-  <!--사이트설명-->
-  <meta property="og:description" content="김세아 포트폴리오">
-  <!--대표이미지-->
-  <meta property="og:image" content="./images/mainimage.png">
-  <title>SeAh Kim Portfolio</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="description" content="사이트소개글">
+	<!--사이트 제목-->
+	<meta property="og:title" content="김세아 포트폴리오에 오신것을 환영합니다.">
+	<!--사이트설명-->
+	<meta property="og:description" content="김세아 포트폴리오">
+	<!--대표이미지-->
+	<meta property="og:image" content="./images/mainimage.png">
+	<title>SeAh Kim Portfolio</title>
   <!-- 공통 CSS -->
   <link rel="stylesheet" href="./css/style.css">
   <!-- 웹폰트 -->
@@ -21,6 +20,8 @@
   <script src="https://kit.fontawesome.com/42bc809b80.js" crossorigin="anonymous"></script>
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+
   <!-- bxslider CSS -->
   <link rel="stylesheet" href="./js/bxslider/jquery.bxslider.min.js">
   <!-- 유투브 배경 -->
@@ -28,232 +29,206 @@
   <!--이미지로드 방지-->
   <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
   <!-- 갤러리 팬시박스 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
   <!-- 진입 애니메이션 -->
   <script src="https://unpkg.com/enter-view"></script>
   <!-- 애니메이션 키프레임 -->
   <link rel="stylesheet" href="./css/ani.css">
   <!-- 사용자 자바스크립트 -->
   <script src="./js/main.js"></script>
-  <!-- <script src="js/typeit.min.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typeit/6.0.2/typeit.min.js" type="text/javascript"></script>
+  <!-- 호버 방향 효과 플러그인 -->
+  <link rel="stylesheet" href="./js/jquery.hoverdir.css">
 </head>
 
 <body>
-  <header id="main_header">
-    <div class="container">
-      <h1><a href="index.html"><img src="./images/logo.png" alt="로고" width="172" height="50">
-        </a></h1>
-      <nav id="main_gnb">
-        <ul>
-          <li><a href="#about">ABOUT</a></li>
-          <li><a href="#portfolio">PORTFOLIO</a></li>
-          <li><a href="#career">CAREER</a></li>
-          <li><a href="#contact">CONTACT</a></li>
-        </ul>
-      </nav>
-      <!--
-      <button id="toggle"><i class="fas fa-bars"></i></button>-->
-    </div>
-  </header>
-
-  <nav id="pager">
-    <ul>
-      <li class="on"><a href="#home">o</a></li>
-      <li><a href="#about">o</a></li>
-      <li><a href="#portfolio">o</a></li>
-      <li><a href="#career">o</a></li>
-      <li><a href="#contact">o</a></li>
-    </ul>
-  </nav>
-
-  <section id="home">
-    <div class="header_group">
-    <h1 class="type" data-text='HELLO~~ I’m SeAh Kim!. Welcome to my Portfolio Homepage'></h1>
-    </div>
-    <div class="you-bg" data-youtube="https://youtu.be/LN8RNhbzn6E">
-    </div>
-
-    <div class="arrow">
-      <a href="#about">
-          <img src="images/arrow.png" alt="arrow">
-      </a>
-    </div>
-  </section>
-
-  <section id="about">
-    <div class="container">
-      <h1>ABOUT ME</h1>
-      <span class="title_line"></span>
-      <article>
-        <img src="images/aboutme.jpg" alt="사진">
-      </article>
-      <article>
-        <div class="list">
-          <div class="edu">
-            <a href="#">
-              <h2><img src="./images/edu.png" alt="학력">
-            </a></h2>
-            <div class="line"></div>
-            <ul>
-              <li>
-                <a href="#">
-              <li>광명북고등학교 | 인문계열</a>
-                <span class="date">1996.03-1999.02</span>
-              </li>
-              <li>
-                <a href="#">
-              <li>경기대학교 | 시각디자인과</a>
-                <span class="date">1999.03-2003.02</span>
-                <p>3-1학기 & 4-1학기 성적장학생
-              </li>
-              <li>
-                <a href="#">
-              <li>더조은아카데미 | 웹디자인퍼블리셔</a>
-                <span class="date">2019.08-2020.01</span>
-              </li>
-            </ul>
-          </div>
-
-          <div class="awards">
-            <a href="#">
-              <h2><img src="./images/awards.png" alt="수상">
-            </a></h2>
-            <div class="line"></div>
-            <ul>
-              <li>
-                <a href="#">
-              <li>팩스타대학생공모전(입선)</a>
-                <span class="date">2002.12.06</span>
-              </li>
-              <li>
-                <a href="#">
-              <li>제7회 경기도산업디자인전(특선)</a>
-                <span class="date">2002.12.26</span>
-              </li>
-              <li>
-                <a href="#">
-              <li>제8회 세계일보광고공무전(금상)</a>
-                <span class="date">2001.11.09</span>
-              </li>
-            </ul>
-          </div>
-
-          <div class="skills">
-            <a href="#">
-              <h2><img src="./images/skill.png" alt="스킬">
-            </a></h2>
-            <div class="line"></div>
-            <ul>
-              <li>
-                <a href="#"><img src="./images/program.png" alt="프로그램"></a>
-              </li>
-            </ul>
-          </div>
-      </article>
-    </div>
-  </section>
-
-  <section id="portfolio">
-    <div class="container">
-        <h1>PORTFOLIO</h1>
-            <div class="title_line"></div>
-              <div class="button-group">
-                <button id="Web">Web | App</button>
-                <button id="Package">Package</button>
-                <button id="Branding">Branding</button>
-                <button id="Promotion">Promotion</button>
-              </div>
-
-          <div class="gallery">
-            <ul>
-              <li><a data-fancybox_="gallery" href="https://eubody.netlify.com"><img
-                    src="./images/web01.png" alt="웹1">
-                    <span class="more-view"><i class="fas fa-search-plus"></i></span>
-                    </a></li>
-              <li><a data-fancybox="gallery" href="https://hoseo.netlify.com/"><img
-                    src="./images/web02.png" alt="웹2"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
-              <li><a data-fancybox="gallery" href="https://blahblahshopping.netlify.com"><img
-                    src="./images/web03.png" alt="웹3"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
-              <li><a data-fancybox="gallery" href="https://cafebene.netlify.com/"><img
-                    src="./images/web04.png" alt="웹4"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
-              <li><a data-fancybox="gallery" href="https://eubody.netlify.com/"><img
-                    src="./images/web05.png" alt="웹5"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/900/900/6"><img
-                    src="./images/web06.png" alt="웹6"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/900/900/7"><img
-                    src="./images/web07.png" alt="웹7"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
-              <li><a data-fancybox="gallery" href="http://placeimg.com/900/900/8"><img
-                    src="./images/web08.png" alt="웹8"><span class="more-view"><i class="fas fa-search-plus"></i></span></a></li>
-            </ul>
-          </div>
-      </div>
-    </div>
-    </section>
-  
-  <section id="career">
-    <div class="container">
-    <h1>MY RESUME</h1>
-      <span class="title_line"></span>
-      <article>
-        <h2><a href="#"><img src="images/experience.png" alt="경력"></a></h2>
-      </article>
-    </div>
-  </section>
-
-  <section id="contact">
-  <div class="container">
-    <h1>CONTACT ME</h1>
-      <span class="title_line"></span>
-        <article>
-        <div class="drop">
-        <h2>Drop Me a Line</h2>
-        <form class="contact-form mt-4">
-          <ul class="row">
-            <li class="col-6">
-              <input type="text" name="name" id="name" placeholder="name" />
-            </li>
-            <li class="col-6">
-              <input type="text" name="email" id="email" placeholder="phone" />
-            </li>
-            <li class="col-6">
-              <input type="text" name="email" id="email" placeholder="e-mail" />
-            </li>
-            <li class="col-12">
-              <textarea name="message" id="message" cols="30" rows="5" placeholder="message"></textarea>
-            </li>
-          </ul>
-          <button type="submit" class="btn">Send Message</button>
-        </form>
-        </div>
+	<header id="main_header">
+		<div class="container">
+			<h1><a href="./index.html"><img src="./images/logo.png" alt="로고" width="172" height="50"></a></h1>
+			<div id="nav_group">
+			<nav id="main_gnb">
+				<ul>
+					<li><a href="#">HOME</a></li>
+					<li><a href="#about">ABOUT</a></li>
+					<li><a href="#portfolio">PORTFOLIO</a></li>
+					<li><a href="#careers">CAREERS</a></li>
+					<li><a href="#contact">CONTACT</a></li>		
+				</ul>
+			</nav>
+			</div>
+			<button id="toggle"><i class="fas fa-bars"></i></button>
+		</div>
+	</header>
+<!--
+	<nav id="pager">
+		<ul>
+		  <li class="on"><a href="#home">O</a></li>
+		  <li><a href="#about">O</a></li>
+		  <li><a href="#portfolio">O</a></li>
+		  <li><a href="#career">O</a></li>
+		  <li><a href="#contact">O</a></li>
+		</ul>
+	</nav> -->
+	
+	<section id="home">
+		<div class="home_txt">
+		<h1 class="type" data-text='HELLO~~ I’m SeAh Kim!. Welcome to my Portfolio Homepage'></h1>
+		</div>
+		<div class="you-bg" data-youtube="https://youtu.be/LN8RNhbzn6E">
+		</div>
+		<a href="#about" class="cta">ABOUT</a>
+		<div class="arrow">
+      	<a href="#about"><img src="images/arrow.png" alt="arrow"></a></div>
+    	</div>
+	</section>
+	
+	<section id="about">
+		<h1>ABOUT ME</h1>
+		<span class="title_line"></span>
+		<article class="container">
+			<div class="col-2">
+				<img class="pic" src="images/aboutme.jpg" alt="사진">
+			</div>
+			<div class="col-2">
+        		<div class="list">
+         		 	<ul class="edu">
+						<h2><img src="./images/edu.png" alt="학력"></a></h2>
+						<div class="line"></div>
+						<li>광명북고등학교 | 인문계열<span class="date">1996.03-1999.02</span>
+						</li>
+						<li>경기대학교 | 시각디자인과<span class="date">1999.03-2003.02</span>
+						<p>3-1학기 & 4-1학기 성적장학생
+						</li>
+						<li>더조은아카데미 | 웹디자인퍼블리셔<span class="date">2019.08-2020.01</span>
+						</li>
+					</ul>
+					<ul class="awards">
+						<h2><img src="./images/awards.png" alt="수상"></h2>
+						<div class="line"></div>
+						<li>팩스타대학생공모전(입선)<span class="date">2002.12.06</span>
+						</li>
+						<li>제7회 경기도산업디자인전(특선)<span class="date">2002.12.26</span>
+						</li>
+						<li>제8회 세계일보광고공무전(금상)<span class="date">2001.11.09</span>
+						</li>
+					</ul>
+					<ul class="skills">
+						<h2><img src="./images/skill.png" alt="스킬"></h2>
+						<div class="line"></div>
+						<li><img src="./images/program.png" alt="프로그램">
+						</li>
+					</ul>
+				</div>
+            </div>
         </article>
-      <article>
-      <div class="more_me">
-      <h2>More About Me</h2>
-        <ul>
-          <li><p><a href="#"><img src="./images/location.png" alt="위치"></a></p></li>
-          <li><p><a href="#"><img src="./images/phone.png" alt="전화"></a></p></li>
-          <li><p><a href="#"><img src="./images/mail.png" alt="메일"></a></p></li>
-          <li><p><a href="#"><img src="./images/birth.png" alt="생일"></a></p></li>
-        </ul>
-        </div>
-        <div class="fine">
-      <h2>Find Me On</h2>
-        <ul>
-          <li><p><a href="#"><img src="./images/kakao.png" alt="카카오"></a></p></li>
-          <li><p><a href="#"><img src="./images/naver.png" alt="네이버"></a></p></li>
-          <li><p><a href="#"><img src="./images/google.png" alt="구글"></a></p></li>
-          <li><p><a href="#"><img src="./images/instar.png" alt="인스타"></a></p></li>
-        </ul>
-        </div>
-        </article>
-  </section>
+        <div class="arrow">
+            <a href="#about"><img src="images/arrow.png" alt="arrow"></a></div>
+	</section>
 
-  <footer id="main_footer">
-    <p>Copyright &copy; 2020 SeAh Kim, All right Reserved.</p>
-  </footer>
+	<section id="portfolio">
+		<h1>PORTFOLIO</h1>
+		<span class="title_line"></span>
+			<article class="container">
+				<div class="button-group">
+					<button id="Web" class=".col-4">Web</button>
+					<button id="Package" class=".col-4">Package</button>
+					<button id="Branding" class=".col-4">Branding</button>
+					<button id="Graphic" class=".col-4">Graphic</button>
+				  </div>
+				<ul id="da-thumbs" class="da-thumbs web">
+				  	<li class="grid-item web"><a data-fancybox_="gallery" href="https://eubody.netlify.com"><img
+						src="./images/web01.jpg" alt="이유바디">
+						<div><span>언더웨어 쇼핑몰 홈페이지(작품 홈페이지 이동)</span></div>
+						</a></li>
+				  	<li class="grid-item web"><a data-fancybox_="gallery" href="https://hoseo.netlify.com"><img
+						src="./images/web02.jpg" alt="호서병원">
+						<div><span>호서병원 홈페이지 리뉴얼(작품 홈페이지 이동)</span></div>
+						</a></li>
+				  	<li class="grid-item web"><a data-fancybox_="gallery" href="https://blahblahshopping.netlify.com"><img
+						src="./images/web03.jpg" alt="블라블라">
+						<div><span>유아동복 홈페이지(작품 홈페이지 이동)</span></div>
+						</a></li>
+				  	<li class="grid-item web"><a data-fancybox_="gallery" href="https://cafebene.netlify.com"><img
+						src="./images/web04.jpg" alt="카페베네">
+						<div><span>카페베네 홈페이지 리뉴얼(작품 홈페이지 이동)</span></div>
+						</a></li>
+				  	<li class="grid-item web"><a data-fancybox_="gallery" href="./images/web05-1.jpg"><img
+						src="./images/web05.jpg" alt="주차웹">
+						<div><span>주차공유 앱 디자인(작품 상세페이지 이동)</span></div>
+						</a></li>
+				  	<li class="grid-item web"><a data-fancybox_="gallery" href="./images/web06-1.jpg"><img
+						src="./images/web06.jpg" alt="국민은행">
+						<div><span>국민은행 홈페이지 리뉴얼(작품 상세페이지 이동)</span></div>
+						</a></li>
+				  	<li class="grid-item web"><a data-fancybox_="gallery" href="./images/web07-1.jpg"><img
+						src="./images/web07.jpg" alt="지오다노">
+						<div><span>지오다노 홈페이지 리뉴얼(작품 상세페이지 이동)</span></div>
+						</a></li>
+				  	<li class="grid-item web"><a data-fancybox_="gallery" href="./images/web08-1.jpg"><img
+						src="./images/web08.jpg" alt="아이콘">
+						<div><span>아이콘 디자인(작품 상세페이지 이동)</span></div>
+						</a></li>
+				</ul>
+			</article>
+	</section>
 
+	<section id="careers">
+		<h1>MY CAREERS</h1>
+		<span class="title_line"></span>
+		<article class="container">
+			<h2><a href="#portfolio"><img src="./images/career1.png" alt="경력"></a></h2>
+		</article>
+	</section>
+
+	<section id="contact">
+		<h1>CONTACT ME</h1>
+		<span class="title_line"></span>
+		<article class="container">
+		<div class="col-2">
+			<ul class="drop">
+				<h2>Drop Me a Line</h2>
+				<form class="contact-form">
+				<li><input type="text" name="name" id="name" placeholder="name" />
+				</li>
+				<li><input type="text" name="phone" id="email" placeholder="phone" />
+				</li>
+				<li> <input type="text" name="email" id="email" placeholder="e-mail" />
+				</li>
+				<li><textarea name="message" id="message" cols="30" rows="5" placeholder="message"></textarea>
+				</li>
+				<button type="submit" class="btn">Send Message</button>
+				</form>
+			</ul>
+		</div>
+		<div class="col-2">
+			<ul class="more_me">
+			  	<h2>More About Me</h2>
+				  <li><img src="./images/info.png" alt="정보"></li>
+			</ul>
+			<ul class="fine">
+			  	<h2>Find Me On</h2>
+				  <li><p><a href="#"><img src="./images/kakao.png" alt="카카오"></a></p></li>
+				  <li><p><a href="#"><img src="./images/naver.png" alt="네이버"></a></p></li>
+				  <li><p><a href="#"><img src="./images/google.png" alt="구글"></a></p></li>
+				  <li><p><a href="#"><img src="./images/instar.png" alt="인스타"></a></p></li>
+			</ul>
+		</div>
+	</article>
+</section>
+		
+	<footer id="main_footer">
+			<div id="to_top">
+				<a href="#">
+					<i class="fas fa-arrow-up faa-bounce animated"></i>
+				</a>
+			</div>
+		<div class="copy">
+			<p>Copyright&copy; 2020 SeAh Kim, All right Reserved.</p>
+		</div>		
+	</footer>
+	
   <!--비디오배경 및 타이프 설정-->
   <script>
     $(function () {
@@ -282,23 +257,65 @@
           console.log('333')
     });
 
-    // 콘텐츠 애니메이션 설정
-    enterView({
-      selector: '.header_group',  // 화면에 진입했을때 애니메이션이 될 요소명
+	// 콘텐츠 애니메이션 설정
+	enterView({
+      selector: '#about .list',
       offset: 0.5,          // 시작 지연시간(ms)
       enter: function (el) {
         el.classList.add('fade-slide-right');  // 애니메이션 클래스 명(CSS)
       },
     });
     enterView({
-      selector: '#about ul',
-      offset: 0.3,
+      selector: '#careers h2',  // 화면에 진입했을때 애니메이션이 될 요소명
+      offset: 0.5,          // 시작 지연시간(ms)
       enter: function (el) {
-        el.classList.add('fade-slide-down');
+        el.classList.add('fade-slide-right');  // 애니메이션 클래스 명(CSS)
+      },
+    });
+    enterView({
+      selector: '#contact .col-2',  // 화면에 진입했을때 애니메이션이 될 요소명
+      offset: 0.5,          // 시작 지연시간(ms)
+      enter: function (el) {
+        el.classList.add('fade-slide-right');  // 애니메이션 클래스 명(CSS)
       },
     });
   </script>
+    <script src="./jquery.hoverdir.js"></script>
+	<script type="text/javascript">
+	  $(function () {
+  
+		$('.container').imagesLoaded(function () {
+		  // 선택할 목록 지정
+		  $('.da-thumbs').isotope({
+			// options
+			itemSelector: '.grid-item',
+			layoutMode: 'fitRows'
+		  });
+  
+		  // 전체 목록
+		  $('.btn-all').on('click', function () {
+			$('.da-thumbs').isotope({ filter: '*' })
+		  });
+  
+		  // name1
+		  $('.btn-name1').on('click', function () {
+			$('.da-thumbs').isotope({ filter: '.name1' })
+		  });
+  
+		  // name2
+		  $('.btn-name2').on('click', function () {
+			$('.da-thumbs').isotope({ filter: '.name2' })
+		  });        
+  
+		  // 호버 효과
+		  $('#da-thumbs > li').hoverdir();
+  
+		}) // end imageLoaded
+  
+  
+	  }); // end $()
+  
+	</script>
 
 </body>
-
 </html>
