--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <body>
 	<header id="main_header">
 		<div class="container">
-			<h1><a href="./index.html"><img src="./images/logo.png" alt="로고" width="172" height="50"></a></h1>
-			<div id="nav_group">
+			<h1><a href="#"><img src="./images/logo.png" alt="로고" width="172" height="50"></a></h1>
+			<div class="nav_group">
 			<nav id="main_gnb">
 				<ul>
 					<li><a href="#">HOME</a></li>
@@ -61,16 +61,17 @@
 			<button id="toggle"><i class="fas fa-bars"></i></button>
 		</div>
 	</header>
-<!--
+
+
 	<nav id="pager">
 		<ul>
-		  <li class="on"><a href="#home">O</a></li>
-		  <li><a href="#about">O</a></li>
-		  <li><a href="#portfolio">O</a></li>
-		  <li><a href="#career">O</a></li>
-		  <li><a href="#contact">O</a></li>
+		  <li class="on"><a href="#home">●</a></li>
+		  <li><a href="#about">●</a></li>
+		  <li><a href="#portfolio">●</a></li>
+		  <li><a href="#careers">●</a></li>
+		  <li><a href="#contact">●</a></li>
 		</ul>
-	</nav> -->
+	</nav>
 	
 	<section id="home">
 		<div class="home_txt">
