--- a/index.html
+++ b/index.html
@@ -202,6 +202,14 @@
 						src="./images/promotion07.jpg" alt="프로모션"></a></li>
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion08.jpg"><img
 						src="./images/promotion08.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion09.jpg"><img
+						src="./images/promotion09.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion10.jpg"><img
+						src="./images/promotion10.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion11.jpg"><img
+						src="./images/promotion11.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion12.jpg"><img
+						src="./images/promotion12.jpg" alt="프로모션"></a></li>
             	</ul>
             </div>		
 			<div class="web">
