--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
 	<header id="main_header">
 		<div class="container">
-			<h1><a href="#"><img src="./images/logo.png" alt="로고" width="172" height="50"></a></h1>
+			<h1><a href="#"><img src="./images/logo.png" alt="로고" width="144" height="40"></a></h1>
 			<div class="nav_group">
 			<nav id="main_gnb">
 				<ul>
@@ -187,29 +187,29 @@
         	<div class="promotion">
           		<ul class="grid" class="grid promotion">
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion01.jpg"><img
-						src="./images/promotion01.jpg" alt="프로모션"></a></li>			
+						src="./images/promotion01-1.jpg" alt="프로모션"></a></li>			
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion02.jpg"><img
-						src="./images/promotion02.jpg" alt="프로모션"></a></li>
+						src="./images/promotion02-1.jpg" alt="프로모션"></a></li>
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion03.jpg"><img
-						src="./images/promotion03.jpg" alt="프로모션"></a></li>
+						src="./images/promotion03-1.jpg" alt="프로모션"></a></li>
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion04.jpg"><img
-						src="./images/promotion04.jpg" alt="프로모션"></a></li>
+						src="./images/promotion04-1.jpg" alt="프로모션"></a></li>
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion05.jpg"><img
-						src="./images/promotion05.jpg" alt="프로모션"></a></li>			
+						src="./images/promotion05-1.jpg" alt="프로모션"></a></li>			
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion06.jpg"><img
-						src="./images/promotion06.jpg" alt="프로모션"></a></li>
+						src="./images/promotion06-1.jpg" alt="프로모션"></a></li>
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion07.jpg"><img
-						src="./images/promotion07.jpg" alt="프로모션"></a></li>
+						src="./images/promotion07-1.jpg" alt="프로모션"></a></li>
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion08.jpg"><img
-						src="./images/promotion08.jpg" alt="프로모션"></a></li>
+						src="./images/promotion08-1.jpg" alt="프로모션"></a></li>
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion09.jpg"><img
-						src="./images/promotion09.jpg" alt="프로모션"></a></li>
+						src="./images/promotion09-1.jpg" alt="프로모션"></a></li>
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion10.jpg"><img
-						src="./images/promotion10.jpg" alt="프로모션"></a></li>
+						src="./images/promotion10-1.jpg" alt="프로모션"></a></li>
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion11.jpg"><img
-						src="./images/promotion11.jpg" alt="프로모션"></a></li>
+						src="./images/promotion11-1.jpg" alt="프로모션"></a></li>
 					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion12.jpg"><img
-						src="./images/promotion12.jpg" alt="프로모션"></a></li>
+						src="./images/promotion12-1.jpg" alt="프로모션"></a></li>
             	</ul>
             </div>		
 			<div class="web">
