--- a/index.html
+++ b/index.html
@@ -126,11 +126,9 @@
 					</ul>
 				</div>
             </div>
-        </article>
-		
-		<div class="arrow">
-      	<a href="#portfolio"><img src="images/arrow.png" alt="arrow"></a>
-		</div>
+			<h2><a href="#portfolio"><img src="images/arrow-1.png" alt="arrow"></a></h2>
+    	</div>
+	</article>	
 	</section>
 
 	<section id="portfolio">
@@ -232,6 +230,8 @@
 						src="./images/web08.jpg" alt="아이콘"></a></li>
 				</ul>
        	 	</div>
+			<br></br>
+			<h2><a href="#careers"><img src="images/arrow-1.png" alt="arrow"></a></h2>
 		</div>
 		</article>
 	</section>
@@ -240,7 +240,10 @@
 		<h1>MY CAREERS</h1>
 		<span class="title_line"></span>
 		<article class="container">
-			<h2><a href="#portfolio"><img src="./images/career1.png" alt="경력"></a></h2>
+			<h1><img src="./images/career1.png" alt="경력"></h1>
+			<br></br>
+			<a href="#contact"><img src="images/arrow-1.png" alt="arrow"></a>
+			</h2>	
 		</article>
 	</section>
 
@@ -279,10 +282,11 @@
 		</div>
 	</article>
 </section>
+
 		
 	<footer id="main_footer">
 			<div id="to_top">
-				<a href="#"><i class="fas fa-arrow-up faa-bounce animated"></i>
+				<a href="#portfolio"><i class="fas fa-arrow-up faa-bounce animated"></i>
 				</a>
 			</div>
 		<div class="copy">
@@ -319,7 +323,7 @@
 		});
 		
       // 초기 모드(전체 작품)
-      $('.grid').isotope({
+    $('.grid').isotope({
         // options
         itemSelector: '.grid-item',
         layoutMode: 'fitRows',
