--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<div class="button-group">
 				<button id="package" class=".col-4">Package</button>				
 				<button id="branding" class=".col-4">Branding</button>
-				<button id="promotion" class=".col-4">Promotion</button>
+				<button id="promotion" class=".col-4">Promo</button>
 				<button id="web" class=".col-4">Web</button>
 			</div>
 		<div class="gallery">
