--- a/index.html
+++ b/index.html
@@ -145,21 +145,29 @@
         	<div class="Package">
        			<ul class="grid" class="grid package">
 					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package01.jpg"><img
-						src="./images/package01.jpg" alt="패키지"> </a></li>			
+						src="./images/package01-1.jpg" alt="패키지"> </a></li>			
 					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package02.jpg"><img
-						src="./images/package02.jpg" alt="패키지"> </a></li>
+						src="./images/package02-1.jpg" alt="패키지"> </a></li>
 					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package03.jpg"><img
-						src="./images/package03.jpg" alt="패키지"> </a></li>
+						src="./images/package03-1.jpg" alt="패키지"> </a></li>
 					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package04.jpg"><img
-						src="./images/package04.jpg" alt="패키지"> </a></li>
+						src="./images/package04-1.jpg" alt="패키지"> </a></li>
 					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package05.jpg"><img
-						src="./images/package05.jpg" alt="패키지"> </a></li>			
+						src="./images/package05-1.jpg" alt="패키지"> </a></li>			
 					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package06.jpg"><img
-						src="./images/package06.jpg" alt="패키지"> </a></li>
+						src="./images/package06-1.jpg" alt="패키지"> </a></li>
 					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package07.jpg"><img
-						src="./images/package07.jpg" alt="패키지"> </a></li>
+						src="./images/package07-1.jpg" alt="패키지"> </a></li>
 					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package08.jpg"><img
-						src="./images/package08.jpg" alt="패키지"> </a></li>
+						src="./images/package08-1.jpg" alt="패키지"> </a></li>
+					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package09.jpg"><img
+						src="./images/package09-1.jpg" alt="패키지"> </a></li>
+					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package10.jpg"><img
+						src="./images/package10-1.jpg" alt="패키지"> </a></li>
+					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package11.jpg"><img
+						src="./images/package11-1.jpg" alt="패키지"> </a></li>
+					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package12.jpg"><img
+						src="./images/package12-1.jpg" alt="패키지"> </a></li>																	
 				</ul>
         	</div>
 			<div class="branding">
