--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 		<article class="container">
 			<div class="button-group">
 				<button id="package" class=".col-4">Package</button>				
-				<button id="branding" class=".col-4">Branding</button>
-				<button id="promotion" class=".col-4">Promo</button>
+				<button id="BX" class=".col-4">BX</button>
+				<button id="promo" class=".col-4">Promo</button>
 				<button id="web" class=".col-4">Web</button>
 			</div>
 		<div class="gallery">
@@ -167,55 +167,71 @@
 					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package11.jpg"><img
 						src="./images/package11-1.jpg" alt="패키지"> </a></li>
 					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package12.jpg"><img
-						src="./images/package12-1.jpg" alt="패키지"> </a></li>																	
+						src="./images/package12-1.jpg" alt="패키지"> </a></li>
+					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package13.jpg"><img
+						src="./images/package13-1.jpg" alt="패키지"> </a></li>
+					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package14.jpg"><img
+						src="./images/package14-1.jpg" alt="패키지"> </a></li>
+					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package15.jpg"><img
+						src="./images/package15-1.jpg" alt="패키지"> </a></li>
+					<li class="grid-item package"><a data-fancybox="gallery" href="./images/package16.jpg"><img
+						src="./images/package16-1.jpg" alt="패키지"> </a></li>																	
 				</ul>
         	</div>
-			<div class="branding">
-				<ul class="grid" class="grid branding">
-					<li class="grid-item branding"><a data-fancybox="gallery" href="./images/branding01-1.jpg"><img
-						src="./images/branding01-1.jpg" alt="브랜딩"></a></li>			
-					<li class="grid-item branding"><a data-fancybox="gallery" href="./images/branding02-1.jpg"><img
-						src="./images/branding02-1.jpg" alt="브랜딩"></a></li>
-					<li class="grid-item branding"><a data-fancybox="gallery" href="./images/branding03-1.jpg"><img
-						src="./images/branding03-1.jpg" alt="브랜딩"></a></li>
-					<li class="grid-item branding"><a data-fancybox="gallery" href="./images/branding04-1.jpg"><img
-						src="./images/branding04-1.jpg" alt="브랜딩"></a></li>
-					<li class="grid-item branding"><a data-fancybox="gallery" href="./images/branding05-1.jpg"><img
-						src="./images/branding05-1.jpg" alt="브랜딩"></a></li>			
-					<li class="grid-item branding"><a data-fancybox="gallery" href="./images/branding06-1.jpg"><img
-						src="./images/branding06-1.jpg" alt="브랜딩"></a></li>
-					<li class="grid-item branding"><a data-fancybox="gallery" href="./images/branding07-1.jpg"><img
-						src="./images/branding07-1.jpg" alt="브랜딩"></a></li>
-					<li class="grid-item branding"><a data-fancybox="gallery" href="./images/branding08-1.jpg"><img
-						src="./images/branding08-1.jpg" alt="브랜딩"></a></li>
+			<div class="BX">
+				<ul class="grid" class="grid BX">
+					<li class="grid-item BX"><a data-fancybox="gallery" href="./images/BX01-1.jpg"><img
+						src="./images/BX01-1.jpg" alt="브랜딩"></a></li>			
+					<li class="grid-item BX"><a data-fancybox="gallery" href="./images/BX02-1.jpg"><img
+						src="./images/BX02-1.jpg" alt="브랜딩"></a></li>
+					<li class="grid-item BX"><a data-fancybox="gallery" href="./images/BX03-1.jpg"><img
+						src="./images/BX03-1.jpg" alt="브랜딩"></a></li>
+					<li class="grid-item BX"><a data-fancybox="gallery" href="./images/BX04-1.jpg"><img
+						src="./images/BX04-1.jpg" alt="브랜딩"></a></li>
+					<li class="grid-item BX"><a data-fancybox="gallery" href="./images/BX05-1.jpg"><img
+						src="./images/BX05-1.jpg" alt="브랜딩"></a></li>			
+					<li class="grid-item BX"><a data-fancybox="gallery" href="./images/BX06-1.jpg"><img
+						src="./images/BX06-1.jpg" alt="브랜딩"></a></li>
+					<li class="grid-item BX"><a data-fancybox="gallery" href="./images/BX07-1.jpg"><img
+						src="./images/BX07-1.jpg" alt="브랜딩"></a></li>
+					<li class="grid-item BX"><a data-fancybox="gallery" href="./images/BX08-1.jpg"><img
+						src="./images/BX08-1.jpg" alt="브랜딩"></a></li>
+					<li class="grid-item BX"><a data-fancybox="gallery" href="./images/BX09-1.jpg"><img
+						src="./images/BX09-1.jpg" alt="브랜딩"></a></li>			
+					<li class="grid-item BX"><a data-fancybox="gallery" href="./images/BX10-1.jpg"><img
+						src="./images/BX10-1.jpg" alt="브랜딩"></a></li>
+					<li class="grid-item BX"><a data-fancybox="gallery" href="./images/BX11-1.jpg"><img
+						src="./images/BX11-1.jpg" alt="브랜딩"></a></li>
+					<li class="grid-item BX"><a data-fancybox="gallery" href="./images/BX12-1.jpg"><img
+						src="./images/BX12-1.jpg" alt="브랜딩"></a></li>
 				</ul>
 			</div>
-        	<div class="promotion">
-          		<ul class="grid" class="grid promotion">
-					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion01.jpg"><img
-						src="./images/promotion01-1.jpg" alt="프로모션"></a></li>			
-					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion02.jpg"><img
-						src="./images/promotion02-1.jpg" alt="프로모션"></a></li>
-					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion03.jpg"><img
-						src="./images/promotion03-1.jpg" alt="프로모션"></a></li>
-					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion04.jpg"><img
-						src="./images/promotion04-1.jpg" alt="프로모션"></a></li>
-					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion05.jpg"><img
-						src="./images/promotion05-1.jpg" alt="프로모션"></a></li>			
-					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion06.jpg"><img
-						src="./images/promotion06-1.jpg" alt="프로모션"></a></li>
-					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion07.jpg"><img
-						src="./images/promotion07-1.jpg" alt="프로모션"></a></li>
-					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion08.jpg"><img
-						src="./images/promotion08-1.jpg" alt="프로모션"></a></li>
-					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion09.jpg"><img
-						src="./images/promotion09-1.jpg" alt="프로모션"></a></li>
-					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion10.jpg"><img
-						src="./images/promotion10-1.jpg" alt="프로모션"></a></li>
-					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion11.jpg"><img
-						src="./images/promotion11-1.jpg" alt="프로모션"></a></li>
-					<li class="grid-item promotion"><a data-fancybox="gallery" href="./images/promotion12.jpg"><img
-						src="./images/promotion12-1.jpg" alt="프로모션"></a></li>
+        	<div class="promo">
+          		<ul class="grid" class="grid promo">
+					<li class="grid-item promo"><a data-fancybox="gallery" href="./images/promo01.jpg"><img
+						src="./images/promo01-1.jpg" alt="프로모션"></a></li>			
+					<li class="grid-item promo"><a data-fancybox="gallery" href="./images/promo02.jpg"><img
+						src="./images/promo02-1.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promo"><a data-fancybox="gallery" href="./images/promo03.jpg"><img
+						src="./images/promo03-1.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promo"><a data-fancybox="gallery" href="./images/promo04.jpg"><img
+						src="./images/promo04-1.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promo"><a data-fancybox="gallery" href="./images/promo05.jpg"><img
+						src="./images/promo05-1.jpg" alt="프로모션"></a></li>			
+					<li class="grid-item promo"><a data-fancybox="gallery" href="./images/promo06.jpg"><img
+						src="./images/promo06-1.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promo"><a data-fancybox="gallery" href="./images/promo07.jpg"><img
+						src="./images/promo07-1.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promo"><a data-fancybox="gallery" href="./images/promo08.jpg"><img
+						src="./images/promo08-1.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promo"><a data-fancybox="gallery" href="./images/promo09.jpg"><img
+						src="./images/promo09-1.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promo"><a data-fancybox="gallery" href="./images/promo10.jpg"><img
+						src="./images/promo10-1.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promo"><a data-fancybox="gallery" href="./images/promo11.jpg"><img
+						src="./images/promo11-1.jpg" alt="프로모션"></a></li>
+					<li class="grid-item promo"><a data-fancybox="gallery" href="./images/promo12.jpg"><img
+						src="./images/promo12-1.jpg" alt="프로모션"></a></li>
             	</ul>
             </div>		
 			<div class="web">
@@ -347,21 +363,21 @@
       });        
 		})
 		
-    $('#branding').click(function(){
+    $('#BX').click(function(){
       $('.grid').isotope({
         // options
         itemSelector: '.grid-item',
         layoutMode: 'fitRows',
-        filter: '.branding'
+        filter: '.BX'
       });        
 		})
 
-    $('#promotion').click(function(){
+    $('#promo').click(function(){
       $('.grid').isotope({
         // options
         itemSelector: '.grid-item',
         layoutMode: 'fitRows',
-        filter: '.promotion'
+        filter: '.promo'
       });        
     })
         
@@ -377,21 +393,21 @@
 	// 콘텐츠 애니메이션 설정
 	enterView({
       selector: '#about .list',
-      offset: 0.5,          // 시작 지연시간(ms)
+      offset: 0.2,          // 시작 지연시간(ms)
       enter: function (el) {
         el.classList.add('fade-slide-right');  // 애니메이션 클래스 명(CSS)
       },
     });
     enterView({
       selector: '#careers h2',  // 화면에 진입했을때 애니메이션이 될 요소명
-      offset: 0.5,          // 시작 지연시간(ms)
+      offset: 0.2,          // 시작 지연시간(ms)
       enter: function (el) {
         el.classList.add('fade-slide-right');  // 애니메이션 클래스 명(CSS)
       },
     });
     enterView({
       selector: '#contact .col-2',  // 화면에 진입했을때 애니메이션이 될 요소명
-      offset: 0.5,          // 시작 지연시간(ms)
+      offset: 0.2,          // 시작 지연시간(ms)
       enter: function (el) {
         el.classList.add('fade-slide-right');  // 애니메이션 클래스 명(CSS)
       },
