--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
             </div>		
 			<div class="web">
 				<ul class="grid" class="grid web">
-				  	<li class="grid-item web"><a data-fancybox_="gallery" href="https://eubody.netlify.com"><img
+				  	<li class="grid-item web"><a data-fancybox_="gallery" href="https://eubody.netlify.com" target="_blank" class="read-more"><img
 						src="./images/web01.jpg" alt="이유바디"></a></li>
-				  	<li class="grid-item web"><a data-fancybox_="gallery" href="https://hoseo.netlify.com"><img
+				  	<li class="grid-item web"><a data-fancybox_="gallery" href="https://hoseo.netlify.com" target="_blank" class="read-more"><img
 						src="./images/web02.jpg" alt="호서병원"></a></li>
-				  	<li class="grid-item web"><a data-fancybox_="gallery" href="https://blahblahshopping.netlify.com"><img
+				  	<li class="grid-item web"><a data-fancybox_="gallery" href="https://blahblahshopping.netlify.com" target="_blank" class="read-more"><img
 						src="./images/web03.jpg" alt="블라블라"></a></li>
-				  	<li class="grid-item web"><a data-fancybox_="gallery" href="https://cafebene.netlify.com"><img
+				  	<li class="grid-item web"><a data-fancybox_="gallery" href="https://cafebene.netlify.com" target="_blank" class="read-more"><img
 						src="./images/web04.jpg" alt="카페베네"></a></li>
 				  	<li class="grid-item web"><a data-fancybox="gallery" href="./images/web05-1.jpg"><img
 						src="./images/web05.jpg" alt="주차웹"></a></li>
